--- a/DOM/dom_03.html
+++ b/DOM/dom_03.html
@@ -13,7 +13,7 @@
             const div =  document.createElement('div');
             console.log(div);
             div.className = "main";
-            div.id = Math.round(Math.random() * 10 + 1)
+            diQv.id = Math.round(Math.random() * 10 + 1)
             div.setAttribute("title","genearted title")
             div.style.backgroundColor = "red";
             div.style.padding = "12px";
